# SoSe-2025

./: Aufgabe 6.1  README.md  aufgabe 6.2.py  leistungstest.py  main.py  my_functions.py  pyproject.toml
Aufgabe61/: my_classes.py  test.py
